(lang dune 3.16)

(name hardcaml_uart)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Blake Loring")

(maintainers "Blake Loring")

(license LICENSE)

(package
 (name hardcaml_uart)
 (synopsis "A hardcaml UART implementation")
 (description "A hardcaml UART implementation")
 (depends ocaml dune))
